--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
 <body>
 
-    <h1>😁Hola Mundo!!!👌</h1>
+    <h1>Calculadora de Edad✨</h1>
+    <label>Introduzca su nombre aquí:</label>
+    <input type="text" placeholder="Nombre completo...">
+
+    <label>Introduzca su año de nacimiento aquí:</label>
+    <input type="text" placeholder="Feca de nacimiento...">
+
 
     <script src="script.js"></script>
     </body>
