--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ejemplo Pagina Web</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <div class="contenedor">
     <h1>Calculadora de Edad✨</h1>
-    <label>Introduzca su nombre aquí:</label>
-    <input type="text" placeholder="Nombre completo...">
+    <label>Introduzca su nombre aquí⤵️</label><br><br>
+    <input type="text" placeholder="Nombre completo..."><br><br><br>
 
-    <label>Introduzca su año de nacimiento aquí:</label>
-    <input type="text" placeholder="Feca de nacimiento...">
+    <label>Introduzca su año de nacimiento aquí⤵️</label><br><br>
+    <input type="date" placeholder="Fecha de nacimiento..."><br><br>
+
+    <button id="clacular">Calcular</button>
+
+    <p id="resultado"></p>
 
 
     <script src="script.js"></script>
+
+    </div>
     </body>
 </html>
