--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <label>Introduzca su año de nacimiento aquí⤵️</label><br><br>
     <input type="date" placeholder="Fecha de nacimiento..."><br><br>
 
-    <button id="clacular">Calcular</button>
+    <button id="calcular">Calcular</button>
 
     <p id="resultado"></p>
 
